# discord-db-migration

./: Cargo.toml  README.md  docker-compose.yml
cql/: schema.cql
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: messages.proto
crates/proto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: coalesce.rs  main.rs  store.rs
